--- a/CSS/project-portfolio.css
+++ b/CSS/project-portfolio.css
@@ -1,4 +1,6 @@
 
+
+/* body style */
 .open-sans{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -7,78 +9,74 @@
   font-variation-settings:
     "wdth" 100;
 }
-/* header section style */
-.header{
+.headr{
     background-image: url("/images/developer.png"),url('/images/header_bg.png');
     background-repeat: no-repeat;
-    background-position: top left,right bottom;
+    background-position: top left,bottom right;
+    
 }
 
-/* nav section style */
+/* shared style */
 
+.bg-style{
+    background-color: #FFF8F3;
+}
+.dark-1{
+    color:#181818;
+}
+.dark-2{
+    color:#474747;
+}
+.text-primary{
+    color: #FD6E0A;
+}
+.btn-primary{
+    background-color: #FD6E0A;
+    color: #FFFFFF;
+    border-style: none;
+    border-radius: 5px;
+    padding: 18px 35px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+/* nav style */
 nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 50px 150px;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ margin: 50px 200px;
 }
 .nav-title{
-    font-weight:bolder;
-    font-size: 45px;
-    color: #181818;
-}
-.span-style{
-    color:#FD6E0A ;
-}
-nav ul li{
-    list-style: none;
-}
-nav ul li a{
-    text-decoration: none;
-    color:#474747;
-    font-size: 20px;
-    font-weight: 400;
-    margin-right: 51px;
-    margin-top: 18px;
+    font-weight: 800;
+    font-size:45px;
 }
 nav ul{
     display: flex;
     align-items: center;
 }
-.button-style{
-    background-color: #FD6E0A;
-    font-weight: bold;
-    font-size: 20px;
-    color:#FFFFFF ;
-    border-radius: 8px;
-    border: 5px solid;
-    padding: 18px 35px;
+nav ul li{
+    list-style: none;
+    margin-right: 51px;
 }
+nav ul a{
+    text-decoration: none;
+}
+
+/* banner section */
 .banner{
     display: flex;
-    justify-content: space-between;
 }
-.banner-content{
-    max-width: 580px;
-    margin: auto;
-    max-height: 358px;
+.banner-conten{
+    width: 585px;
+    max-height: 386px;
+    margin-left: 230px;
 }
-.banner-tytle{
-    color: #474747;
-    font-weight:600;
+.banner-greetting{
+    font-weight: 600;
     font-size: 45px;
 }
-.banner-heading{
-    font-size: 45px;
+.banner-title{
     font-weight: bold;
-    color: #181818;
-    margin-top: 20px;
-}
-.banner-image{
-    width: 420px;
-}
-.banner-description{
-    font-weight: 400;
-    font-size: 18px;
-    color: #474747;
+    font-size:70px;
 }
